--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
   <!-- Home-->
   <section id="home">
     <div class="content">
-      <h2 class="text-3xl">GIS Analyst & Web Mapping Enthusiast</h2>
+      <h2>Joe Neratko - GIS Analyst & Developer</h2>
+      <h3>
+        Current Position: GIS Analyst CTC Technology & Energy
+        <br>Education: M.S. Environmental Geoscience, B.S Geology
+      </h3>
       <p>
         I am a GIS Professional who specializes in taking complex problems
         and delivering them to clients in a clear and concise product.
@@ -44,17 +48,10 @@
       <h2 class="text-3xl font-bold mb-8 text-center">Projects</h2>
       <div class="grid md:grid-cols-2 gap-8">
         <!-- Example Project Card -->
-        <div class="bg-gray-50 rounded-xl shadow p-4">
+        <div class="bg-gray-50 rounded-xl shadow p-4 col-span-2">
           <h3 class="text-xl font-semibold mb-2">Web Map App: Urban Tree Inventory</h3>
-          <iframe src="https://your-webmap-link.com" class="w-full h-64 border" title="Urban Tree Map"></iframe>
-          <p class="mt-2">An interactive map showing tree species and health metrics in urban areas.</p>
-        </div>
-        <!-- Add more project cards as needed -->
-         <div class="bg-gray-50 rounded-xl shadow p-4">
-          <h3 class="text-xl font-semibold mb-2">Web Map App: Urban Tree Inventory</h3>
-          <iframe src="https://your-webmap-link.com" class="w-full h-64 border" title="Urban Tree Map"></iframe>
-          <p class="mt-2">An interactive map showing tree species and health metrics in urban areas.</p>
-        </div>
+          <iframe src="https://jneratko.github.io/manhattan-tree-webmap/" class="w-full h-[600px] border" title="Urban Tree Map"></iframe>
+          <p class="mt-2">An interactive map showing tree species and health metrics in urban areas. This was created using JavaScript, HTML, and CSS for styling.</p>
       </div>
     </div>
   </section>
@@ -62,23 +59,11 @@
   <!-- About -->
   <section id="about" class="py-16">
     <div class="max-w-4xl mx-auto px-4">
-      <h2 class="text-3xl font-bold mb-6 text-center">About Me</h2>
+      <h2 class="text-3xl mb-6 text-center">About Me</h2>
       <p class="text-lg text-center">I'm Joseph Neratko, a GIS Analyst with experience in spatial analysis, cartography, and developing web-based geospatial tools using ArcGIS, Python, and JavaScript.</p>
     </div>
   </section>
 
-  <!-- Contact -->
-  <section id="contact" class="py-16">
-    <div class="max-w-xl mx-auto px-4">
-      <h2 class="text-3xl font-bold mb-6 text-center">Contact</h2>
-      <form class="space-y-4">
-        <input type="text" placeholder="Name" class="w-full border rounded p-2" required>
-        <input type="email" placeholder="Email" class="w-full border rounded p-2" required>
-        <textarea placeholder="Message" rows="4" class="w-full border rounded p-2" required></textarea>
-        <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Send</button>
-      </form>
-    </div>
-  </section>
 
   <footer class="text-center py-6 text-sm text-gray-500">
     &copy; 2025 Joseph Neratko. All rights reserved.
