--- a/index.html
+++ b/index.html
@@ -11,58 +11,118 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="bg-emerald-950">
 
   <!-- Sticky Header -->
-  <header>
+  <header class="bg-emerald-950"> 
   <div class="max-w-6xl mx-auto flex justify-between items-center px-4">
     <a href="#home"><img src="data/logo white.webp" alt="Logo" class="h-16 w-auto"></a>
     <ul class="flex space-x-6">
-      <li><a href="#projects" class="hover:text-blue-400">Projects</a></li>
-      <li><a href="#about" class="hover:text-blue-400">About</a></li>
-      <li><a href="#contact" class="hover:text-blue-400">Contact</a></li>
+      <li><a href="#projects" class="hover:text-white">Projects</a></li>
+      <li><a href="#contact" class="hover:text-white">Contact</a></li>
     </ul>
   </div>
 </header>
 
-  <!-- Home-->
-  <section id="home">
-    <div class="content">
-      <h2>Joe Neratko - GIS Analyst & Developer</h2>
-      <h3>
-        Current Position: GIS Analyst CTC Technology & Energy
-        <br>Education: M.S. Environmental Geoscience, B.S Geology
-      </h3>
-      <p>
-        I am a GIS Professional who specializes in taking complex problems
-        and delivering them to clients in a clear and concise product.
-        I leverage my educational background in geology and environmental science
-        to have a thorough and technical understanding of geospatial data.
-      </p>
-    </div>
-  </section>
+<section
+  id="home"
+  class="relative min-h-screen bg-no-repeat bg-cover bg-center flex items-center justify-center text-center text-[#dde3c5] px-6 py-20 shadow-md"
+  style="background-image: url('data/home light.jpg');"
+>
+  <div class="max-w-4xl mx-auto bg-emerald-950 bg-opacity-60 rounded-xl p-8">
 
-  <!--Projects-->
-  <section id="projects" class="bg- scroll-mt-32">
-    <div class="max-w-5xl mx-auto px-4">
-      <h2 class="text-3xl font-bold mb-8 text-center">Projects</h2>
-      <div class="grid md:grid-cols-2 gap-8">
-        <!-- Example Project Card -->
-        <div class="bg-gray-50 rounded-xl shadow p-4 col-span-2">
-          <h3 class="text-xl font-semibold mb-2">Web Map App: Urban Tree Inventory</h3>
-          <iframe src="https://jneratko.github.io/manhattan-tree-webmap/" class="w-full h-[600px] border" title="Urban Tree Map"></iframe>
-          <p class="mt-2">An interactive map showing tree species and health metrics in urban areas. This was created using JavaScript, HTML, and CSS for styling.</p>
+    <h2 class="text-3xl sm:text-4xl md:text-5xl font-semibold mb-4">
+      Joe Neratko - GIS Analyst & Developer
+    </h2>
+
+    <h3 class="text-base sm:text-lg md:text-xl font-medium mb-4 leading-relaxed">
+      <b>Current Position:</b> GIS Analyst @ CTC Technology & Energy - Remote<br>
+      <b>Education:</b> M.S. Environmental Geoscience, B.S. Geology
+    </h3>
+
+    <p class="text-sm sm:text-base md:text-lg leading-relaxed mb-6">
+      I am a GIS Professional who specializes in taking complex problems
+      and delivering them to clients in a clear and concise product.
+      I leverage my educational background in geology and environmental science
+      to have a thorough and technical understanding of geospatial data.
+    </p>
+
+    <!-- Download Button -->
+    <a href="data/Neratko Portfolio 2025.pdf" download="Neratko Portfolio 2025.pdf">
+      <button class="bg-emerald-700 hover:bg-emerald-950 text-white font-semibold py-2 px-6 rounded-lg transition-colors duration-300">
+        Download My Full Portfolio
+      </button>
+    </a>
+
+  </div>
+</section>
+
+
+<!-- Projects -->
+<section id="projects" class="scroll-mt-32 mt-12 mb-16 bg-emerald-950">
+  <div class="max-w-6xl mx-auto px-4">
+    <h2 class="text-4xl font-bold mb-8 text-center text-[#dde3c5]"><b>Projects</b></h2>
+
+    <div class="grid md:grid-cols-2 gap-10">
+
+      <!-- Project 1 -->
+      <div class="bg-[#dde3c5] rounded-xl shadow p-4 col-span-2">
+        <h3 class="text-xl text-emerald-950 text-center mb-2">Web App: Urban Tree Inventory</h3>
+        <iframe src="https://jneratko.github.io/manhattan-tree-webmap/" class="w-full h-[600px] border border-[#a0a080]" title="Urban Tree Map"></iframe>
+        <p class="mt-2 text-emerald-950">An interactive map showing tree species and health metrics in urban areas. This was created using Leaflet, JavaScript, HTML, and CSS for styling.</p>
       </div>
-    </div>
-  </section>
 
-  <!-- About -->
-  <section id="about" class="py-16">
-    <div class="max-w-4xl mx-auto px-4">
-      <h2 class="text-3xl mb-6 text-center">About Me</h2>
-      <p class="text-lg text-center">I'm Joseph Neratko, a GIS Analyst with experience in spatial analysis, cartography, and developing web-based geospatial tools using ArcGIS, Python, and JavaScript.</p>
+      <!-- Project 2 -->
+      <div class="bg-[#dde3c5] rounded-xl shadow p-4 col-span-2">
+        <h3 class="text-xl text-emerald-950 text-center mb-2">Web Map App Screenshot</h3>
+        <img src="data/Picture2.jpg" class="w-full h-auto border border-[#a0a080]" title="Urban Tree Map" />
+        <p class="mt-2 text-emerald-950">An interactive map showing tree species and health metrics in urban areas. This was created using JavaScript, HTML, and CSS for styling.</p>
+      </div>
+
+      <!-- Project 3 -->
+      <div class="bg-[#dde3c5] rounded-xl shadow p-4 col-span-2">
+        <h3 class="text-xl text-emerald-950 text-center mb-2">Web Map App Screenshot</h3>
+        <img src="data/Picture4.jpg" class="w-full h-auto border border-[#a0a080]" title="Urban Tree Map" />
+        <p class="mt-2 text-emerald-950">An interactive map showing tree species and health metrics in urban areas. This was created using JavaScript, HTML, and CSS for styling.</p>
+      </div>
+
+      <!-- Project 4 -->
+      <div class="bg-[#dde3c5] rounded-xl shadow p-4 col-span-2">
+        <h3 class="text-xl text-emerald-950 text-center mb-2">Web Map App Screenshot</h3>
+        <img src="data/Picture1.png" class="w-full h-auto border border-[#a0a080]" title="Urban Tree Map" />
+        <p class="mt-2 text-emerald-950">An interactive map showing tree species and health metrics in urban areas. This was created using JavaScript, HTML, and CSS for styling.</p>
+      </div>
+
+      <!-- Project 5 -->
+      <div class="bg-[#dde3c5] rounded-xl shadow p-4 col-span-2">
+        <h3 class="text-xl text-emerald-950 text-center mb-2">Web Map App Screenshot</h3>
+        <img src="data/Picture3.jpg" class="w-full h-auto border border-[#a0a080]" title="Urban Tree Map" />
+        <p class="mt-2 text-emerald-950">An interactive map showing tree species and health metrics in urban areas. This was created using JavaScript, HTML, and CSS for styling.</p>
+      </div>
+
     </div>
-  </section>
+  </div>
+</section>
+
+
+<!-- Contact -->
+<section id="contact" class="py-16 bg-[#dde3c5] flex items-center justify-center text-center">
+  <div class="max-w-4xl mx-auto bg-opacity-50 rounded-xl p-8">
+
+    <h2 class="text-3xl md:text-4xl mb-6 text-emerald-950 font-semibold">Contact</h2>
+    
+    <p class="text-lg md:text-xl mb-6 text-emerald-950">
+      Email me at <a href="mailto:jneratko24@gmail.com" class="underline hover:text-gray-200">jneratko24@gmail.com</a> or connect on LinkedIn below
+    </p>
+
+    <!-- Linkedin Button -->
+    <a href="https://www.linkedin.com/in/joeneratko" target="_blank" rel="noopener noreferrer" class="inline-block">
+      <img src="data/LI-Logo.png" alt="LinkedIn Logo" class="h-12 w-auto mx-auto hover:scale-110 transition-transform duration-300">
+    </a>
+
+  </div>
+</section>
+
 
 
   <footer class="text-center py-6 text-sm text-gray-500">
