Update Project Descriptions.

--- a/index.html
+++ b/index.html
@@ -67,37 +67,36 @@
 
       <!-- Project 1 -->
       <div class="bg-[#dde3c5] rounded-xl shadow p-4 col-span-2">
-        <h3 class="text-xl text-emerald-950 text-center mb-2">Web App: Urban Tree Inventory</h3>
+        <h3 class="text-xl text-emerald-950 text-center mb-2">Web App: NYC Urban Tree Inventory</h3>
         <iframe src="https://jneratko.github.io/manhattan-tree-webmap/" class="w-full h-[600px] border border-[#a0a080]" title="Urban Tree Map"></iframe>
         <p class="mt-2 text-emerald-950">An interactive map showing tree species and health metrics in urban areas. This was created using Leaflet, JavaScript, HTML, and CSS for styling.</p>
       </div>
 
       <!-- Project 2 -->
       <div class="bg-[#dde3c5] rounded-xl shadow p-4 col-span-2">
-        <h3 class="text-xl text-emerald-950 text-center mb-2">Web Map App Screenshot</h3>
-        <img src="data/Picture2.jpg" class="w-full h-auto border border-[#a0a080]" title="Urban Tree Map" />
-        <p class="mt-2 text-emerald-950">An interactive map showing tree species and health metrics in urban areas. This was created using JavaScript, HTML, and CSS for styling.</p>
+        <h3 class="text-xl text-emerald-950 text-center mb-2">ESRI Storymap Example</h3>
+        <iframe src="https://storymaps.arcgis.com/stories/ea9a684b80974d3b8b7d83ec0d1f9a2b" class="w-full h-[1000px] border border-[#a0a080]" ></iframe>
       </div>
 
       <!-- Project 3 -->
       <div class="bg-[#dde3c5] rounded-xl shadow p-4 col-span-2">
-        <h3 class="text-xl text-emerald-950 text-center mb-2">Web Map App Screenshot</h3>
-        <img src="data/Picture4.jpg" class="w-full h-auto border border-[#a0a080]" title="Urban Tree Map" />
-        <p class="mt-2 text-emerald-950">An interactive map showing tree species and health metrics in urban areas. This was created using JavaScript, HTML, and CSS for styling.</p>
-      </div>
-
-      <!-- Project 4 -->
-      <div class="bg-[#dde3c5] rounded-xl shadow p-4 col-span-2">
-        <h3 class="text-xl text-emerald-950 text-center mb-2">Web Map App Screenshot</h3>
-        <img src="data/Picture1.png" class="w-full h-auto border border-[#a0a080]" title="Urban Tree Map" />
-        <p class="mt-2 text-emerald-950">An interactive map showing tree species and health metrics in urban areas. This was created using JavaScript, HTML, and CSS for styling.</p>
+        <h3 class="text-xl text-emerald-950 text-center mb-2">Static Map Example</h3>
+        <img src="data/Picture2.jpg" class="w-full h-auto border border-[#a0a080]" title="Urban Tree Map" />
+        <p class="mt-2 text-emerald-950">This map uses CDC case data to show the date when each U.S. county first reported a COVID-19 case. The custom legend doubles as a timeline, highlighting key events from the first year of the pandemic and providing additional context to the spread patterns shown on the map.</p>
       </div>
 
       <!-- Project 5 -->
       <div class="bg-[#dde3c5] rounded-xl shadow p-4 col-span-2">
-        <h3 class="text-xl text-emerald-950 text-center mb-2">Web Map App Screenshot</h3>
-        <img src="data/Picture3.jpg" class="w-full h-auto border border-[#a0a080]" title="Urban Tree Map" />
-        <p class="mt-2 text-emerald-950">An interactive map showing tree species and health metrics in urban areas. This was created using JavaScript, HTML, and CSS for styling.</p>
+        <h3 class="text-xl text-emerald-950 text-center mb-2">Flood Prediction Analysis - Okitibbeha County, Mississippi</h3>
+        <img src="data/Picture4.jpg" class="w-full h-auto border border-[#a0a080]" title="Urban Tree Map" />
+        <p class="mt-2 text-emerald-950">The model utilized in the creation of this map contained four variables that each contributed to an output value, ranging from 0 to 3, representing the likelihood of flash flooding at each cell location. The four variables used were: land cover type, slope, distance to roads, and distance to rivers. The land cover type and distance to roads both contributed 30% to the overall likelihood while slope and distance to rivers both contributed 20%. The regions with the highest risk of flooding are roadways, especially where rivers and roads intersect.</p>
+      </div>
+
+      <!-- Project 4 -->
+      <div class="bg-[#dde3c5] rounded-xl shadow p-4 col-span-2">
+        <h3 class="text-xl text-emerald-950 text-center mb-2">Custom Broadband Network Designs</h3>
+        <img src="data/Picture1.png" class="w-full h-auto border border-[#a0a080]" title="Urban Tree Map" />
+        <p class="mt-2 text-emerald-950">A sample broadband network design created using ArcGIS Network Analyst. </p>
       </div>
 
     </div>
